--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "generator-pixijs",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "description": "Yeoman Pixi.js generator",
   "license": "MIT",
   "main": "app/index.js",
@@ -11,16 +11,13 @@
   "author": {
     "name": "Gareth Parker",
     "email": "gareth.parker@mindcandy.com",
-    "url": "https://garfty.com"
-  },
-  "engines": {
-    "node": ">=0.10.0"
+    "url": "https://github.com/garfty"
   },
   "scripts": {
     "test": "mocha"
   },
   "files": [
-    "app"
+    "generators"
   ],
   "keywords": [
     "yeoman-generator",
@@ -31,8 +28,12 @@
     "webgl"
   ],
   "dependencies": {
-    "yeoman-generator": "^0.18.9",
     "chalk": "^1.0.0",
+    "lodash": "^3.10.0",
+    "mkdirp": "^0.5.1",
+    "slugify": "^0.1.1",
+    "underscore.string": "^3.1.0",
+    "yeoman-generator": "^0.19.0",
     "yosay": "^1.0.2"
   },
   "devDependencies": {
