--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "main": "app/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/mindcandy/pixijs-generator"
+    "url": "https://github.com/garfty/pixijs-generator"
   },
   "author": {
     "name": "Gareth Parker",
-    "email": "gareth.parker@mindcandy.com",
+    "email": "gareth.e.parker@gmail.com",
     "url": "https://github.com/garfty"
   },
   "scripts": {
